[project]
name = "email-openenv"
version = "0.1.0"
description = "Email classification OpenEnv API"
authors = [{name = "Chiranthan"}]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"